--- a/reservation.html
+++ b/reservation.html
@@ -16,13 +16,13 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,400;0,600;0,700;1,200;1,700&display=swap" rel="stylesheet">
             
-        <link href="bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
-        <link href="bootstrap-icons.css" rel="stylesheet">
+        <link href="css/bootstrap-icons.css" rel="stylesheet">
 
-        <link href="vegas.min.css" rel="stylesheet">
+        <link href="css/vegas.min.css" rel="stylesheet">
 
-        <link href="tooplate-barista.css" rel="stylesheet">
+        <link href="css/tooplate-barista.css" rel="stylesheet">
 <!--
 
 Tooplate 2137 Barista
