--- a/index.html
+++ b/index.html
@@ -441,14 +441,14 @@ Bootstrap 5 HTML CSS Template
                                                 <p>"Unmatched Creativity" The tailoring was so precise, and the design was beyond what imagined.</p>
 
                                                 <div class="d-flex border-top pt-3 mt-4">
-                                                    <strong class="text-white">4.5 <small class="ms-2">Rating</small></strong>
+                                                    <strong class="text-white">4.8 <small class="ms-2">Rating</small></strong>
 
                                                     <div class="reviews-group ms-auto">
                                                         <i class="bi-star-fill"></i>
                                                         <i class="bi-star-fill"></i>
                                                         <i class="bi-star-fill"></i>
                                                         <i class="bi-star-fill"></i>
-                                                        <i class="bi-star"></i>
+                                                        <i class="bi-star-half"></i>
                                                     </div>
                                                 </div>
                                             </div>
@@ -503,14 +503,14 @@ Bootstrap 5 HTML CSS Template
                                                 <p>"Best Tailor In Town" From the design to the delivery, everything was top-notch. My BouBou gown dress was elegant and comfortable. Lee's elegance is my go-to tailor!.</p>
 
                                                 <div class="d-flex border-top pt-3 mt-4">
-                                                    <strong class="text-white">4.5 <small class="ms-2">Rating</small></strong>
+                                                    <strong class="text-white">5.0 <small class="ms-2">Rating</small></strong>
 
                                                     <div class="reviews-group ms-auto">
                                                         <i class="bi-star-fill"></i>
                                                         <i class="bi-star-fill"></i>
                                                         <i class="bi-star-fill"></i>
                                                         <i class="bi-star-fill"></i>
-                                                        <i class="bi-star"></i>
+                                                        <i class="bi-star-fill"></i>
                                                     </div>
                                                 </div>
                                             </div>
@@ -566,7 +566,7 @@ Bootstrap 5 HTML CSS Template
                             <div id="responseMessage"></div>
 
                             <div class="col-lg-6 col-12 mx-auto mt-5 mt-lg-0 ps-lg-5">
-                                <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.7569470202!2d5.642002499999999!3d6.295638399999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1040d3fda82171e3%3A0xb028331ad5829d0a!2sErediauwa%20St%2C%20Oka%2C%20Benin%20City%2C%20Edo!5e0!3m2!1sen!2sng!4v1732014513992!5m2!1sen!2sng" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.7569470202!2d5.642002499999999!3d6.295638399999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1040d3fda82171e3%3A0xb028331ad5829d0a!2sErediauwa%20St%2C%20Oka%2C%20Benin%20City%2C%20Edo!5e0!3m2!1sen!2sng!4v1732014513992!5m2!1sen!2sng" width="400" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
 
                         </div>
