--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Bootstrap 5 HTML CSS Template
                             <div class="col-lg-6 col-12">
                                 <div class="ratio ratio-1x1">
                                     <video autoplay="" loop="" muted="" class="custom-video" poster="">
-                                        <source src="videos/7776736-uhd_4096_2160_25fps.mp4" type="video/mp4">
+                                        <source src="videos/1217.mp4" type="video/mp4">
 
                                         Your browser does not support the video tag.
                                     </video>
