--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ Bootstrap 5 HTML CSS Template
                             </div>
 
                             <div class="col-lg-6 col-12">
-                                <form action="/sendMessage" method="post" id="messageForm" class="custom-form contact-form" role="form">
+                                <form action="https://formsubmit.co/wiszgem1@gmail.com" method="post" id="messageForm" class="custom-form contact-form" role="form">
 
                                 <div class="row">
                                     
@@ -559,7 +559,7 @@ Bootstrap 5 HTML CSS Template
                                 </div>
 
                                 <div class="col-lg-5 col-12 mx-auto mt-3">
-                                    <button type="submit" onclick="sendMessage()" class="form-control">Send Message</button>
+                                    <button type="submit" class="form-control">Send Message</button>
                                 </div>
                             </form>
                             </div>
