--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ Bootstrap 5 HTML CSS Template
                             </div>
 
                             <div class="col-lg-6 col-12">
-                                <form action="https://formsubmit.co/wiszgem.1@gmail.com" method="post" id="messageForm" class="custom-form contact-form" role="form">
+                                <form action="https://formsubmit.co/jaygem16@gmail.com" method="post" class="custom-form contact-form" role="form">
 
                                 <div class="row">
                                     
