--- a/index.html
+++ b/index.html
@@ -541,19 +541,19 @@ Bootstrap 5 HTML CSS Template
                                     <div class="col-lg-6 col-12">
                                         <label for="username" class="form-label">Name <sup class="text-danger">*</sup></label>
 
-                                        <input type="text" name="username" id="username" class="form-control" placeholder="Jackson" required="">
+                                        <input type="text" name="UserName" id="username" class="form-control" placeholder="Jackson" required="">
                                     </div>
 
                                     <div class="col-lg-6 col-12">
                                         <label for="email" class="form-label">Email Address</label>
 
-                                        <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Jack@gmail.com" required="">
+                                        <input type="email" name="Email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Jack@gmail.com" required="">
                                     </div>
 
                                     <div class="col-12">
                                         <label for="message" class="form-label">How can we help?</label>
 
-                                        <textarea name="message" rows="4" class="form-control" id="message" placeholder="Message" required=""></textarea>
+                                        <textarea name="Message" rows="4" class="form-control" id="message" placeholder="Message" required=""></textarea>
                                         
                                     </div>
                                 </div>
