--- a/reservation.html
+++ b/reservation.html
@@ -41,7 +41,7 @@ Bootstrap 5 HTML CSS Template
                     <div class="container">
                         <a class="navbar-brand d-flex align-items-center" href="index.html">
                             <img src="images/coffee-beans.png" class="navbar-brand-image img-fluid" alt="">
-                            Barista.co
+                            Lews And Sews
                         </a>
         
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -91,35 +91,35 @@ Bootstrap 5 HTML CSS Template
                                 <div class="row">
                                     <div class="col-lg-7 col-12 p-0">
 
-                                        <form class="custom-form booking-form" action="#" method="post" role="form">
+                                        <form class="custom-form booking-form" action="https://formsubmit.co/jaygem16@gmail.com" method="post" role="form">
                                             <div class="text-center mb-4 pb-lg-2">
-                                                <em class="text-white">Fill out the booking form</em>
+                                                <em class="text-white">Fill out for the pre-oredered dress</em>
 
-                                                <h2 class="text-white">Book a table</h2>
+                                                <h2 class="text-white">Book a style</h2>
                                             </div>
 
                                             <div class="booking-form-body">
                                                 <div class="row">
                                                     <div class="col-lg-6 col-12">
-                                                        <input type="text" name="booking-form-name" id="fullname" class="form-control" placeholder="Full Name" required>
+                                                        <input type="text" name="Customers Fullname" id="fullname" class="form-control" placeholder="Full Name" required>
                                                     </div>
 
                                                     <div class="col-lg-6 col-12">
-                                                        <input type="tel" id="phone" class="form-control" name="booking-form-phone" placeholder="Phone: 085 456 7890" patter="pmsk[0-9]{3}-[0-9]{3}-[0-9]{4}" required="">
+                                                        <input type="tel" id="phone" class="form-control" name="Phone No" placeholder="Phone: 085 456 7890" patter="pmsk[0-9]{3}-[0-9]{3}-[0-9]{4}" required="">
                                                     </div>
 
                                                     <div class="col-lg-6 col-12">
-                                                        <input type="date" name="booking-form-date" id="datetime" class="form-control" placeholder="Date" required="">
+                                                        <input type="date" name="Date" id="datetime" class="form-control" placeholder="Date" required="">
                                                     </div>
 
                                                     <div class="col-lg-12 col-12">
-                                                        <input type="number" name="booking-form-number" id="numPeople" class="form-control" placeholder="Number of People" required="">
+                                                        <input type="number" name="Amount of People/Dress" id="numPeople" class="form-control" placeholder="Number of People" required="">
 
-                                                        <textarea name="booking-form-message" rows="3" class="form-control" id="comment" placeholder="Comment (Optional)"></textarea>
+                                                        <textarea name="booking-form-message" rows="3" class="form-control" id="comment" placeholder="Your Style"></textarea>
                                                     </div>
 
                                                     <div class="col-lg-4 col-md-10 col-8 mx-auto mt-2">
-                                                        <button type="submit" onclick="sendInformation()" class="form-control">Submit</button>
+                                                        <button type="submit" class="form-control">Submit</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -129,7 +129,7 @@ Bootstrap 5 HTML CSS Template
                                     <div class="col-lg-5 col-12 p-0">
                                         <div class="booking-form-image-wrap">
                                             
-                                            <img src="images/barman-with-fruits.jpg" class="booking-form-image img-fluid" alt="">
+                                            <img src="images/slides/2024111316482057.jpg" class="booking-form-image img-fluid" alt="">
                                         </div>
 
                                     </div>
@@ -150,7 +150,7 @@ Bootstrap 5 HTML CSS Template
 
                                 <strong class="text-white">
                                     <i class="bi-geo-alt me-2"></i>
-                                    Bandra West, Mumbai, Maharashtra 400050, India
+                                    Erediauwa, Upper Sakponba Road, Benin city, Nigeria
                                 </strong>
 
                                 <ul class="social-icon mt-4">
@@ -176,17 +176,17 @@ Bootstrap 5 HTML CSS Template
 
                                 <p class="d-flex mb-1">
                                     <strong class="me-2">Phone:</strong>
-                                    <a href="tel: 305-240-9671" class="site-footer-link">
-                                        (65) 
-                                        305 2409 671
+                                    <a href="tel: 080142879754" class="site-footer-link">
+                                        (234) 
+                                        814 287 9754
                                     </a>
                                 </p>
 
                                 <p class="d-flex">
                                     <strong class="me-2">Email:</strong>
 
-                                    <a href="mailto:info@yourgmail.com" class="site-footer-link">
-                                        hello@barista.co
+                                    <a href="mailto:lorretabrickson@gmail.com" class="site-footer-link">
+                                        lorretabrickson@gmail.com
                                     </a>
                                 </p>
                             </div>
@@ -197,17 +197,17 @@ Bootstrap 5 HTML CSS Template
 
                                 <ul class="opening-hours-list">
                                     <li class="d-flex">
-                                        Monday - Friday
+                                        Monday - Saturday
                                         <span class="underline"></span>
 
                                         <strong>9:00 - 18:00</strong>
                                     </li>
 
                                     <li class="d-flex">
-                                        Saturday
+                                        Friday
                                         <span class="underline"></span>
 
-                                        <strong>11:00 - 16:30</strong>
+                                        <strong>9:00 - 15:00</strong>
                                     </li>
 
                                     <li class="d-flex">
