--- a/reservation.html
+++ b/reservation.html
@@ -102,6 +102,7 @@ Bootstrap 5 HTML CSS Template
                                                 <div class="row">
                                                     <div class="col-lg-6 col-12">
                                                         <input type="text" name="Customers Fullname" id="fullname" class="form-control" placeholder="Full Name" required>
+                                                        <input type="hidden" name="_cc" value="another@email.com">
                                                     </div>
 
                                                     <div class="col-lg-6 col-12">
