--- a/reservation.html
+++ b/reservation.html
@@ -102,7 +102,6 @@ Bootstrap 5 HTML CSS Template
                                                 <div class="row">
                                                     <div class="col-lg-6 col-12">
                                                         <input type="text" name="Customers Fullname" id="fullname" class="form-control" placeholder="Full Name" required>
-                                                        <input type="hidden" name="_cc" value="another@email.com">
                                                     </div>
 
                                                     <div class="col-lg-6 col-12">
@@ -118,6 +117,7 @@ Bootstrap 5 HTML CSS Template
 
                                                         <textarea name="booking-form-message" rows="3" class="form-control" id="comment" placeholder="Your Style"></textarea>
                                                     </div>
+                                                    <input type="hidden" name="_subject" value="New submission!">
 
                                                     <div class="col-lg-4 col-md-10 col-8 mx-auto mt-2">
                                                         <button type="submit" class="form-control">Submit</button>
