--- a/reservation.html
+++ b/reservation.html
@@ -115,9 +115,10 @@ Bootstrap 5 HTML CSS Template
                                                     <div class="col-lg-12 col-12">
                                                         <input type="number" name="Amount of People/Dress" id="numPeople" class="form-control" placeholder="Number of People" required="">
 
-                                                        <textarea name="booking-form-message" rows="3" class="form-control" id="comment" placeholder="Your Style"></textarea>
+                                                        <textarea name="Style Of Dress" rows="3" class="form-control" id="comment" placeholder="Your Style"></textarea>
                                                     </div>
                                                     <input type="hidden" name="_subject" value="New submission!">
+                                                    <input type="hidden" name="_autoresponse" value="your custom message">
 
                                                     <div class="col-lg-4 col-md-10 col-8 mx-auto mt-2">
                                                         <button type="submit" class="form-control">Submit</button>
