--- a/reservation.html
+++ b/reservation.html
@@ -113,7 +113,7 @@ Bootstrap 5 HTML CSS Template
                                                     </div>
 
                                                     <div class="col-lg-6 col-12">
-                                                        <input type="text" name="Email" id="datetime" class="form-control" placeholder="Email" required>
+                                                        <input type="text" name="email" id="datetime" class="form-control" placeholder="Email" required>
                                                     </div>
 
                                                     <div class="col-lg-12 col-12">
