--- a/reservation.html
+++ b/reservation.html
@@ -121,7 +121,10 @@ Bootstrap 5 HTML CSS Template
 
                                                         <textarea name="Style Of Dress" rows="3" class="form-control" id="comment" placeholder="Your Style"></textarea>
                                                     </div>
-                                                    <input type="hidden" name="_autoresponse" value="your custom message">
+
+                                                    <input type="hidden" name="_autoresponse" value="Thanks For Contacting Lees and sews">
+                                                    <input type="hidden" name="_subject" value="New submission!">
+
                                                     <div class="col-lg-4 col-md-10 col-8 mx-auto mt-2">
                                                         <button type="submit" class="form-control">Submit</button>
                                                     </div>
