--- a/reservation.html
+++ b/reservation.html
@@ -124,6 +124,7 @@ Bootstrap 5 HTML CSS Template
 
                                                     <input type="hidden" name="_autoresponse" value="Thanks For Contacting Lees and sews">
                                                     <input type="hidden" name="_subject" value="New submission!">
+                                                    <input type="hidden" name="_template" value="table">
 
                                                     <div class="col-lg-4 col-md-10 col-8 mx-auto mt-2">
                                                         <button type="submit" class="form-control">Submit</button>
