--- a/reservation.html
+++ b/reservation.html
@@ -125,6 +125,8 @@ Bootstrap 5 HTML CSS Template
                                                     <input type="hidden" name="_autoresponse" value="Thanks For Contacting Lees and sews.
                                                     We received your message and will get back to you shortly.">
                                                     <input type="hidden" name="_autoresponse" value="If your inquiry is urgent feel free to contact us directly at Whatsapp https://wa.me/08142879754">
+                                                    <input type="hidden" name="_captcha" value="false">
+                                                    
                                                     <div class="col-lg-4 col-md-10 col-8 mx-auto mt-2">
                                                         <button type="submit" class="form-control">Submit</button>
                                                     </div>
