--- a/reservation.html
+++ b/reservation.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Barista Cafe - HTML Reservation Form</title>
+        <title>Lee's And Sews | Reservation</title>
 
         <!-- CSS FILES -->                
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,6 +23,8 @@
         <link href="css/vegas.min.css" rel="stylesheet">
 
         <link href="css/tooplate-barista.css" rel="stylesheet">
+
+        <link rel="icon" href="images/coffee-beans.png" type="image/png">
 <!--
 
 Tooplate 2137 Barista
@@ -41,7 +43,7 @@ Bootstrap 5 HTML CSS Template
                     <div class="container">
                         <a class="navbar-brand d-flex align-items-center" href="index.html">
                             <img src="images/coffee-beans.png" class="navbar-brand-image img-fluid" alt="">
-                            Lews And Sews
+                            Lee's and Sews
                         </a>
         
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -123,7 +125,7 @@ Bootstrap 5 HTML CSS Template
                                                     </div>
 
                                                     <input type="hidden" name="_autoresponse" value="Thanks For Contacting Lees and sews. We received your message and will get back to you shortly.">
-                                                    <input type="hidden" name="_autoresponse" value="If your inquiry is urgent feel free to contact us directly at Whatsapp https://wa.me/08142879754">
+                                                    <input type="hidden" name="_subject" value="If your inquiry is urgent feel free to contact us directly at Whatsapp https://wa.me/08142879754">
                                                     <input type="hidden" name="_template" value="table">
 
                                                     <div class="col-lg-4 col-md-10 col-8 mx-auto mt-2">
@@ -163,17 +165,17 @@ Bootstrap 5 HTML CSS Template
 
                                 <ul class="social-icon mt-4">
                                     <li class="social-icon-item">
-                                        <a href="#" class="social-icon-link bi-facebook">
+                                        <a href="https://www.facebook.com/profile.php?id=100068433378500" class="social-icon-link bi-facebook">
                                         </a>
                                     </li>
         
                                     <li class="social-icon-item">
-                                        <a href="https://x.com/minthu" target="_new" class="social-icon-link bi-twitter">
+                                        <a href="https://www.instagram.com/leesandsews/?igsh=YzlijYTk1ODg3Zg%3D%3D#" target="_new" class="social-icon-link bi-instagram">
                                         </a>
                                     </li>
 
                                     <li class="social-icon-item">
-                                        <a href="#" class="social-icon-link bi-whatsapp">
+                                        <a href="https://wa.me/08142879755" class="social-icon-link bi-whatsapp">
                                         </a>
                                     </li>
                                 </ul>
@@ -184,7 +186,7 @@ Bootstrap 5 HTML CSS Template
 
                                 <p class="d-flex mb-1">
                                     <strong class="me-2">Phone:</strong>
-                                    <a href="tel: 080142879754" class="site-footer-link">
+                                    <a href="tel: 08142879754" class="site-footer-link">
                                         (234) 
                                         814 287 9754
                                     </a>
@@ -228,8 +230,8 @@ Bootstrap 5 HTML CSS Template
                             </div>
 
                             <div class="col-lg-8 col-12 mt-4">
-                                <p class="copyright-text mb-0">Copyright © Barista Cafe 2048 
-                                    - Design: <a rel="sponsored" href="https://www.tooplate.com" target="_blank">Tooplate</a></p>
+                                <p class="copyright-text mb-0">Copyright © Lees and Sews 2048
+                                    - Design: <a rel="sponsored" href="" target="_blank">Wisz Gem</a></p>
                             </div>
 
                     </div>
