--- a/reservation.html
+++ b/reservation.html
@@ -93,7 +93,7 @@ Bootstrap 5 HTML CSS Template
                                 <div class="row">
                                     <div class="col-lg-7 col-12 p-0">
 
-                                        <form class="custom-form booking-form" action="https://formsubmit.co/jaygem16@gmail.com" method="post" role="form">
+                                        <form class="custom-form booking-form" action="https://formspree.io/f/xjkvnplk" method="post" role="form">
                                             <div class="text-center mb-4 pb-lg-2">
                                                 <em class="text-white">Fill out for the pre-oredered dress</em>
 
