--- a/reservation.html
+++ b/reservation.html
@@ -93,7 +93,7 @@ Bootstrap 5 HTML CSS Template
                                 <div class="row">
                                     <div class="col-lg-7 col-12 p-0">
 
-                                        <form class="custom-form booking-form" action="https://formspree.io/f/xjkvnplk" method="post" role="form">
+                                        <form class="custom-form booking-form" action="https://formsubmit.co/jaygem16@gmail.com" method="post" role="form">
                                             <div class="text-center mb-4 pb-lg-2">
                                                 <em class="text-white">Fill out for the pre-oredered dress</em>
 
@@ -103,6 +103,9 @@ Bootstrap 5 HTML CSS Template
                                             <div class="booking-form-body">
                                                 <div class="row">
                                                     <div class="col-lg-6 col-12">
+                                                        <input type="hidden" name="_autoresponse" value="Thanks For Contacting Lees and sews. We received your message and will get back to you shortly.
+                                                        If your inquiry is urgent feel free to contact us directly at Whatsapp https://wa.me/08142879754">
+
                                                         <input type="text" name="Customers Fullname" id="fullname" class="form-control" placeholder="Full Name" required>
                                                     </div>
 
@@ -123,9 +126,8 @@ Bootstrap 5 HTML CSS Template
 
                                                         <textarea name="Style Of Dress" rows="3" class="form-control" id="comment" placeholder="Your Style"></textarea>
                                                     </div>
-
-                                                    <input type="hidden" name="_autoresponse" value="Thanks For Contacting Lees and sews. We received your message and will get back to you shortly.">
-                                                    <input type="hidden" name="_subject" value="If your inquiry is urgent feel free to contact us directly at Whatsapp https://wa.me/08142879754">
+                                                    
+                                                    <input type="hidden" name="_subject" value="Customers reservation">
                                                     <input type="hidden" name="_template" value="table">
 
                                                     <div class="col-lg-4 col-md-10 col-8 mx-auto mt-2">
